--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
+obj/
+bin/
+**/obj/
+**/bin/
+.idea/
+*.iml
+
 *.class
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 
